force-app/main/default/objects/PrinterStatus__e/PrinterStatus__e.object-meta.xml
<CustomObject>
    <label>PrinterStatus</label>
    <pluralLabel>PrinterStatuses</pluralLabel>
</CustomObject>