force-app/main/default/objects/PrinterStatus__e/fields/InkStatus__c.field-meta.xml
<CustomField>
    <fullName>InkStatus__c</fullName>
    <label>InkStatus</label>
    <length>20</length>
    <type>Text</type>
</CustomField>