force-app/main/default/objects/PrinterStatus__e/fields/PrinterModel__c.field-meta.xml
<CustomField>
    <fullName>PrinterModel__c</fullName>
    <label>PrinterModel</label>
    <length>20</length>
    <type>Text</type>
</CustomField>