force-app/main/default/objects/PrinterStatus__e/fields/SerialNumber__c.field-meta.xml
<CustomField>
    <fullName>SerialNumber__c</fullName>
    <label>SerialNumber</label>
    <length>20</length>
    <type>Text</type>
</CustomField>